--- a/COPYING.adoc
+++ b/COPYING.adoc
@@ -1,5 +1,5 @@
 Copyright © 2019-2019
-Contributors to the LibreQuartz project.  All rights reserved.
+Contributors to the LibreQuake project.  All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
@@ -10,7 +10,7 @@ met:
   * Redistributions in binary form must reproduce the above copyright
     notice, this list of conditions and the following disclaimer in the
     documentation and/or other materials provided with the distribution.
-  * Neither the name of the LibreQuartz project nor the names of its
+  * Neither the name of the LibreQuake project nor the names of its
     contributors may be used to endorse or promote products derived from
     this software without specific prior written permission.
 
@@ -26,8 +26,8 @@ LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-For a list of contributors to the LibreQuartz project, see the file
+For a list of contributors to the LibreQuake project, see the file
 CREDITS.
 
-For a list of resources used in the LibreQuartz project, see the directory
+For a list of resources used in the LibreQuake project, see the directory
 docs
