--- a/docs/freedoom-docs/README.adoc
+++ b/docs/freedoom-docs/README.adoc
@@ -5,7 +5,7 @@ person shooter game, but _Freedoom_ by itself is just the raw material
 for a game.  It must be paired with a compatible _Doom_ engine to be
 played.
 
-There is a massive http://doomwiki.org/wiki/Idgames_archive[back
+There is a massive https://doomwiki.org/wiki/Idgames_archive[back
 catalog], spanning over two decades, containing thousands of _Doom_
 levels and other modifications (“mods”) made by fans of the game.
 _Freedoom_ aims to be compatible with these and allows most to be
@@ -16,10 +16,10 @@ single-player oriented campaigns and one set of levels designed
 exclusively for multiplayer deathmatch:
 
 [horizontal]
-*Freedoom: Phase 1*:: Four chapters, nine levels each, totalling 36
+*Freedoom: Phase 1*:: Four episodes, nine levels each, totalling 36
 levels.  This game aims for compatibility with _The Ultimate Doom_
 mods, also known as plain _Doom_ or _Doom 1_.
-*Freedoom: Phase 2*:: 32 levels in one long chapter, featuring extra
+*Freedoom: Phase 2*:: 32 levels in one long episode, featuring extra
 monsters and a double-barrelled shotgun.  This project aims for
 compatibility with _Doom II_ mods.
 *FreeDM*:: A 32-level game designed for competitive deathmatch play.
@@ -29,11 +29,11 @@ all the game data such as graphics, sound effects, music, and so on.
 This file is often called an “IWAD” by those in the _Doom_ and
 _Freedoom_ communities.  While the _Doom_ engine source code is free,
 you would normally still need one of the proprietary data files from
-http://www.idsoftware.com/[id Software] to play _Doom_.  _Freedoom_
+https://www.idsoftware.com/[id Software] to play _Doom_.  _Freedoom_
 aims to create a free alternative: combined with the GPL-licensed
 _Doom_ source code, this results in a completely free game.
 
-For more information, see http://freedoom.github.io/.
+For more information, see https://freedoom.github.io/.
 
 == How to play
 
@@ -41,7 +41,7 @@ Since _Freedoom_ is only the game data, you will still need to
 download an engine separately.  These are also often termed “source
 ports” by the community.  There are an overwhelming number of choices
 available, a lengthy list of which is available on the
-http://doomwiki.org/wiki/Source_port[Doom Wiki].
+https://doomwiki.org/wiki/Source_port[Doom Wiki].
 
 One particularly recommended by the _Freedoom_ project is
 https://zdoom.org/[GZDoom].  This engine offers good support for
@@ -74,10 +74,8 @@ of the following options should solve it:
     the above methods if possible.
 
     ** +freedoom1.wad+ can be renamed to +doom.wad+
-    ** +freedoom2.wad+ can be renamed to +doom2.wad+, +tnt.wad+, or
-       +plutonia.wad+
-    ** +freedm.wad+ can be renamed to +doom2.wad+, +tnt.wad+, or
-       +plutonia.wad+
+    ** +freedoom2.wad+ can be renamed to +doom2.wad+
+    ** +freedm.wad+ can be renamed to +doom2.wad+
 
 Additionally, for Unix-like operating systems, such as GNU/Linux or a
 BSD variant, _Freedoom_ may be packaged and installed with programs
@@ -97,8 +95,8 @@ intact, see `COPYING`), and you may study it--for example, to see how
 an “IWAD” is built.  To facilitate this, you can get the full source
 code for _Freedoom_, in this case, in the form of a DeuTex tree.
 
-You may read more about free software at the http://www.gnu.org/[GNU]
-and http://www.fsf.org/[Free Software Foundation] websites.
+You may read more about free software at the https://www.gnu.org/[GNU]
+and https://www.fsf.org/[Free Software Foundation] websites.
 
 == Contributing to Freedoom
 
@@ -164,6 +162,11 @@ It is sensible to also heed the following guidelines:
     is an engine with strict adherence to vanilla Doom limits and
     bugs, and working in it assures that levels can be played with any
     _Doom_ engine.
+  * Use a Doom editor to check for errors. In
+    http://eureka-editor.sourceforge.net/[Eureka] it's possible to
+    check for errors with the Check / All menu, or by pressing `F9`.
+  * If possible run `make test` and fix any errors found. Note that
+    some of the errors can be fixed by `make fix`.
 
 === Graphics
 
@@ -197,18 +200,15 @@ patches, but keep in mind:
 === Submitting your work
 
 The most common, and a fairly simple method, to submit your work is by
-posting it on the http://www.doomworld.com/vb/freedoom/[Freedoom
-forum] on Doomworld Forums.  This allows a great number of people to
-review the contribution and provide feedback, although the
-registration process is known to be cumbersome.
+posting it on the
+https://www.doomworld.com/forum/17-freedoom/[Freedoom forum] on
+Doomworld Forums.  This allows a great number of people to review the
+contribution and provide feedback, although the registration process
+is known to be cumbersome.
 
 An alternative to using the forum, is to post your submission on the
 https://github.com/freedoom/freedoom/issues[issue tracker], which may
 also be peer-reviewed and provide a feedback cycle.
-
-Lastly, it is possible to get work submitted by joining the official
-irc://irc.oftc.net/freedoom[#freedoom] IRC channel, although this
-poses the greatest risk of being lost and forgotten.
 
 Unfortunately, the Freedoom project cannot provide hosting space in
 the form of a web page nor FTP, however there are many free file hosts
@@ -237,3 +237,13 @@ version control systems, adopted by projects such as Linux and Git.
 For an explanation of this style, see
 https://chris.beams.io/posts/git-commit/[How to Write a Git Commit
 Message].
+
+If you create a git commit for someone else it is helpful to set the
+author of the commit so that they get credit. Ask them what name/alias
+and email they would like to use. For example:
+[source,bash]
+-----------------
+git commit --author "Bob Smith <bob@example.com>" ...
+-----------------
+If they prefer not to give an email then the email can be omitted, so
+just "Bob Smith" in the above example.
